# trial-test

./: .pre-commit-config.yaml  .testmondata  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: action.yml  dependabot.yml  send_payload.py
calculator/: operations.py
ci/: input_test.py  run_git_tag_base_pyproject.py  show_testmondata.py  update_pyproject_version.py
macos-12/: report.html  report_page.html
macos-13/: report_page.html
pytest-cov-report_macos-13/: class_index.html  function_index.html  index.html  status.json  z_18d00526ff1ef70c___init___py.html  z_18d00526ff1ef70c_config_loader_py.html  z_18d00526ff1ef70c_ton_address_conv_py.html  z_1c4a7dd5eb44a3dc___init___py.html  z_1c4a7dd5eb44a3dc_operations_py.html  z_6367dd23758bd3aa___init___py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_async_aiohttp_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_sync_py.html  z_6367dd23758bd3aa_get_ton_txns_api_py.html  z_a0bbc743cc1b9e89___init___py.html  z_bc60eed38f2759c6___init___py.html  z_bc60eed38f2759c6_create_ton_stkrwd_cryptact_custom_py.html
pytest-cov-report_macos-13_python_3.11/: class_index.html  function_index.html  index.html  status.json  z_18d00526ff1ef70c___init___py.html  z_18d00526ff1ef70c_config_loader_py.html  z_18d00526ff1ef70c_ton_address_conv_py.html  z_1c4a7dd5eb44a3dc___init___py.html  z_1c4a7dd5eb44a3dc_operations_py.html  z_6367dd23758bd3aa___init___py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_async_aiohttp_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_sync_py.html  z_6367dd23758bd3aa_get_ton_txns_api_py.html  z_a0bbc743cc1b9e89___init___py.html  z_bc60eed38f2759c6___init___py.html  z_bc60eed38f2759c6_create_ton_stkrwd_cryptact_custom_py.html
pytest-cov-report_macos-13_python_3.12/: class_index.html  function_index.html  index.html  status.json  z_18d00526ff1ef70c___init___py.html  z_18d00526ff1ef70c_config_loader_py.html  z_18d00526ff1ef70c_ton_address_conv_py.html  z_1c4a7dd5eb44a3dc___init___py.html  z_1c4a7dd5eb44a3dc_operations_py.html  z_6367dd23758bd3aa___init___py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_async_aiohttp_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_sync_py.html  z_6367dd23758bd3aa_get_ton_txns_api_py.html  z_a0bbc743cc1b9e89___init___py.html  z_bc60eed38f2759c6___init___py.html  z_bc60eed38f2759c6_create_ton_stkrwd_cryptact_custom_py.html
pytest-cov-report_ubuntu-latest/: class_index.html  function_index.html  index.html  status.json  z_18d00526ff1ef70c___init___py.html  z_18d00526ff1ef70c_config_loader_py.html  z_18d00526ff1ef70c_ton_address_conv_py.html  z_1c4a7dd5eb44a3dc___init___py.html  z_1c4a7dd5eb44a3dc_operations_py.html  z_6367dd23758bd3aa___init___py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_async_aiohttp_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_sync_py.html  z_6367dd23758bd3aa_get_ton_txns_api_py.html  z_a0bbc743cc1b9e89___init___py.html  z_bc60eed38f2759c6___init___py.html  z_bc60eed38f2759c6_create_ton_stkrwd_cryptact_custom_py.html
pytest-cov-report_ubuntu-latest_python_3.11/: class_index.html  function_index.html  index.html  status.json  z_18d00526ff1ef70c___init___py.html  z_18d00526ff1ef70c_config_loader_py.html  z_18d00526ff1ef70c_ton_address_conv_py.html  z_1c4a7dd5eb44a3dc___init___py.html  z_1c4a7dd5eb44a3dc_operations_py.html  z_6367dd23758bd3aa___init___py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_async_aiohttp_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_sync_py.html  z_6367dd23758bd3aa_get_ton_txns_api_py.html  z_a0bbc743cc1b9e89___init___py.html  z_bc60eed38f2759c6___init___py.html  z_bc60eed38f2759c6_create_ton_stkrwd_cryptact_custom_py.html
pytest-cov-report_ubuntu-latest_python_3.12/: class_index.html  function_index.html  index.html  status.json  z_18d00526ff1ef70c___init___py.html  z_18d00526ff1ef70c_config_loader_py.html  z_18d00526ff1ef70c_ton_address_conv_py.html  z_1c4a7dd5eb44a3dc___init___py.html  z_1c4a7dd5eb44a3dc_operations_py.html  z_6367dd23758bd3aa___init___py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_async_aiohttp_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_py.html  z_6367dd23758bd3aa_get_latest_ton_amount_calculation_sync_py.html  z_6367dd23758bd3aa_get_ton_txns_api_py.html  z_a0bbc743cc1b9e89___init___py.html  z_bc60eed38f2759c6___init___py.html  z_bc60eed38f2759c6_create_ton_stkrwd_cryptact_custom_py.html
pytest-cov-report_windows-latest/: class_index.html  function_index.html  index.html  status.json  z_540aa5087e7f03a7___init___py.html  z_540aa5087e7f03a7_operations_py.html  z_87efa439e608afe3___init___py.html  z_87efa439e608afe3_config_loader_py.html  z_87efa439e608afe3_ton_address_conv_py.html  z_a0bbc743cc1b9e89___init___py.html  z_b54eda27e7526e34___init___py.html  z_b54eda27e7526e34_create_ton_stkrwd_cryptact_custom_py.html  z_bd0e9ba29659beb6___init___py.html  z_bd0e9ba29659beb6_get_latest_ton_amount_calculation_async_aiohttp_py.html  z_bd0e9ba29659beb6_get_latest_ton_amount_calculation_py.html  z_bd0e9ba29659beb6_get_latest_ton_amount_calculation_sync_py.html  z_bd0e9ba29659beb6_get_ton_txns_api_py.html
pytest-cov-report_windows-latest_python_3.11/: class_index.html  function_index.html  index.html  status.json  z_540aa5087e7f03a7___init___py.html  z_540aa5087e7f03a7_operations_py.html  z_87efa439e608afe3___init___py.html  z_87efa439e608afe3_config_loader_py.html  z_87efa439e608afe3_ton_address_conv_py.html  z_a0bbc743cc1b9e89___init___py.html  z_b54eda27e7526e34___init___py.html  z_b54eda27e7526e34_create_ton_stkrwd_cryptact_custom_py.html  z_bd0e9ba29659beb6___init___py.html  z_bd0e9ba29659beb6_get_ton_txns_api_py.html  (+3 more)
(+170 files in other folders)
