[tool.poetry]
name = "trial-test"
version = "1.0.12"
description = "An experimental project to test out various tools."
authors = ["7rikaz"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mdformat = "^0.7.16"
numpy = "2.1.1"
pandas = "^2.2.2"
requests = "^2.32.3"
dash = "^2.18.1"
aiohttp = "^3.10.5"
types-requests = "^2.32.0.20240907"
dash-bootstrap-components = "^1.6.0"
pytoniq-core = "^0.1.39"
babel = "^2.16.0"
httpx = "^0.27.2"
python-dotenv = "^1.0.1"
freezegun = "^1.5.1"
tomlkit = "^0.13.2"
pytonapi = "^0.4.0"
types-pytz = "^2024.2.0.20240913"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
mypy = "^1.3.0"
taskipy = "^1.13.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
pytest-html = "^4.1.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
tdctest1 = "pytest -s -vv --cov=. --cov-branch --cov-report term-missing --cov-report html"
tdctest2 = "pytest --html=htmlcov/report_page.html"
test_gh_action_xml = "python scripts/run_tests.py --report xml"
test_gh_action_term = "python scripts/run_tests.py --report term"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501"]
per-file-ignores = {}

[tool.mypy]
files = ["project_a", "tests"]
python_version = "3.12"
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
#plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = ["pytz.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["project_a", "tests"]
pythonpath = ["."]
addopts = "--cov=project_a --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["project_a"]
omit = ["project_a/staking/ton_whales_staking_dashboard.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
    "def main"
]

[tool.coverage.html]
directory = "htmlcov"
